[project]
name = "webapp"
version = "1.0.0"
description = "Off-Grid AI Agent - FastAPI web application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "pysqlite3>=0.6.0",
    "email-validator>=2.0.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.120.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["database"]
packages = []
